# programming_tasks

./: CMakeLists.txt  README.md  programming_tasks.sln
containers/: CMakeLists.txt  common.h  containers.vcxproj  containers.vcxproj.filters  linked_list.cpp  linked_list.h  node.h  pch.h  priority_queue.cpp  priority_queue.h  stack.cpp  stack.h
containers/inc/: common.h  linked_list.h  node.h  priority_queue.h  stack.h
containers/src/: linked_list.c  node.c  priority_queue.c  stack.c
task_1/: CMakeLists.txt  main.cpp  reverse_bits.c  reverse_bits.h  task_1.vcxproj  task_1.vcxproj.filters
task_8/: CMakeLists.txt  calc_volume.c  calc_volume.cpp  calc_volume.h  main.cpp  task_8.vcxproj  task_8.vcxproj.filters
tasks_2_3_4_7/: CMakeLists.txt  braces_validation.c  braces_validation.cpp  braces_validation.h  main.cpp  task_2_3_4_7.vcxproj  task_2_3_4_7.vcxproj.filters
tasks_5_6/: CMakeLists.txt  check_island.cpp  check_island.h  main.cpp  tasks_5_6.vcxproj  tasks_5_6.vcxproj.filters
